Revision history for {{ $dist->name }}

{{ $NEXT }}

2.06      2013-09-17 19:43:09Z (Karen Etheridge)
        - packaging the dist again with EUMM rather than MBT

2.05      2013-09-11 03:50:28Z (Karen Etheridge)
        - Support for handling lvalue methods (Graham Knop)
        - convert to building with Dist::Zilla

2.04    2013-03-30
        - Remove erroneous perl 5.8 requirement

2.03    2013-02-02
        - New build to fix missing files in inc/

2.02    2013-02-01
        - Dist improvements (Karen Etheridge)

2.01    2013-01-27
        - Test for and fix $_ corruption (Vladimir Timofeev)

2.00    2012-12-29
        - New 'fresh' modifier (Aaron Crane)

1.12    2012-10-28
        - Another MANIFEST fix

1.11    2012-10-28
        - Re-release with proper distribution contents and MANIFEST

1.10    2012-10-23
        - Avoid "Variable "$..." will not stay shared" warnings under 5.8.x
        - (from changes in 1.09) [#80194] (Karen Etheridge)

1.09    2012-04-02
        - Install modified subs in the proper namespace [#74569]
          (Karen Etheridge)

1.08   2011-10-16
        - Document install_modifier (requested by Tokuhiro Matsuno)

1.07   2011-02-23
        - Move from Test::Exception to Test::Fatal (Justin Hunter)

1.06   2010-11-26
        - Add support for: modifier ["name1", "name2"] => sub {}

1.05   2009-10-21 14:01:11
        - Add install_modifier as a public API (Goro Fuji)

1.04   2009-06-15 11:33:31
        - We need parens around confess if we're going to delay-load
          Carp, affects only 5.10 (reported by David Raab)

1.03   2009-06-14 14:44:25
        - Modernize the dist
        - Fix possible test failures
        - Only load Carp if we have to

1.02   2009-05-31 23:33:42
        - Fix for void context (reported by tokuhirom)
        - Lift dependency on on MRO::Compat

1.01   2008-06-26 22:22:30
        - Revert the caching fix. It makes wrapping parent-class methods
          painfully slower.