@@ -10,3 +10,6 @@ Authority.authority = cpan:SARTAK
 installer = MakeMaker   ; for 5.6 and 5.8 compat
 
 [ContributorsFromGit]
+
+[Prereqs / DevelopRequires]
+Test::Warnings = 0
