@@ -1,6 +1,7 @@
 use strict;
 use warnings;
-use Test::More tests => 4;
+use Test::More;
+use if $ENV{AUTHOR_TESTING}, 'Test::Warnings';
 use Test::Fatal;
 
 do {
@@ -45,3 +46,4 @@ do {
     );
 };
 
+done_testing;
