@@ -1,6 +1,7 @@
 use strict;
 use warnings;
-use Test::More tests => 6;
+use Test::More;
+use if $ENV{AUTHOR_TESTING}, 'Test::Warnings';
 
 my ($after_called, $orig_called) = (0, 0);
 my $child = Child->new();
@@ -41,3 +42,4 @@ BEGIN
     };
 }
 
+done_testing;
