@@ -1,6 +1,7 @@
 use strict;
 use warnings;
-use Test::More tests => 28;
+use Test::More;
+use if $ENV{AUTHOR_TESTING}, 'Test::Warnings';
 
 my @seen;
 my $class = Parent->new();
@@ -164,3 +165,5 @@ BEGIN
         push @seen, "orig:$_[1]";
     }
 }
+
+done_testing;
