@@ -1,6 +1,7 @@
 use strict;
 use warnings;
 use Test::More;
+use if $ENV{AUTHOR_TESTING}, 'Test::Warnings';
 use Test::Fatal;
 
 {
